--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -1,22 +1,7 @@
-<!--
-  Generated template for the SearchPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar color="dark">
-    <ion-title>SearchPage</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding class="searchContent">
-  <ion-list no-lines>
+  <ion-list no-lines *ngIf="searchResults">
     <ion-card class="searchItem" *ngFor="let result of searchResults">
-      <img (press)="showImageActionSheet()" [src]="result.images.original.url" alt="There must be a big problem">
+      <img [src]="result.images.original.url" alt="There must be a big problem">
     </ion-card>
   </ion-list>
 </ion-content>
