--- a/src/pages/trend/trend.html
+++ b/src/pages/trend/trend.html
@@ -1,18 +1,7 @@
-<!--
-  Generated template for the TrendPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar color="dark">
-    <ion-title>TrendPage</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
+<ion-content padding class="trendContent">
+  <ion-list no-lines *ngIf="trendResults">
+    <ion-card class="trendItem" *ngFor="let result of trendResults">
+      <img (press)="showImageActionSheet(result)" [src]="result.images.original.url" alt="There must be a big problem">
+    </ion-card>
+  </ion-list>
 </ion-content>
