--- a/src/pages/favorites/favorites.html
+++ b/src/pages/favorites/favorites.html
@@ -1,5 +1,5 @@
 <ion-content padding class="favoritesContent">
-  <ion-list no-lines *ngIf="favoriteResults">
+  <ion-list no-lines *ngIf="favoritesResults">
     <ion-card class="favoritesItem" *ngFor="let result of favoritesResults">
       <img (press)="showImageActionSheet(result)" [src]="result.images.original.url" alt="There must be a big problem">
     </ion-card>
