--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,5 @@
-<ion-content padding class="homeContent">
-  <ion-item class="homeSearchItem">
+<ion-content padding class="homeContent" [ngStyle]="{'background-image': 'url(' + backgroundUrl + ')'}">
+  <ion-item no-lines class="homeSearchItem">
     <ion-input type="text" [(ngModel)]="searchWord" class="homeSearchInput" placeholder="Trump, Cats, Anything"></ion-input>
     <button ion-button clear color="light" item-right (click)="goSearchPage()" [disabled]="!searchWord">Search</button>
   </ion-item>
