--- a/src/pages/trend/trend.html
+++ b/src/pages/trend/trend.html
@@ -1,12 +1,16 @@
-<ion-content padding class="trendContent">
+<ion-content padding class="pageContent">
   <ion-refresher (ionRefresh)="doRefresh($event)">
-    <ion-refresher-content pullingIcon="ios-arrow-down-outline" refreshingSpinner="circles"
-    refresher-icon-color="white">
+    <ion-refresher-content pullingIcon="ios-arrow-down-outline" refreshingSpinner="circles" refreshingText="Refreshing Trending Gifs">
     </ion-refresher-content>
   </ion-refresher>
-  <ion-list no-lines *ngIf="trendResults">
-    <ion-card class="trendItem" *ngFor="let result of trendResults">
-      <img (press)="showImageActionSheet(result)" [src]="result.images.original.url" alt="There must be a big problem">
-    </ion-card>
-  </ion-list>
+  <div>
+    <ion-list no-lines *ngIf="trendResults">
+      <ion-card class="pageItem" *ngFor="let result of trendResults">
+        <img (press)="showImageActionSheet(result)" [src]="result.images.original.url" alt="There must be a big problem">
+      </ion-card>
+    </ion-list>
+  </div>
+  <div class="imageDiv">
+    <img src="./../../assets/imgs/giphy.gif" class="giphy" />
+  </div>
 </ion-content>
