--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,9 @@
-<ion-content padding class="homeContent" [ngStyle]="{'background-image': 'url(' + backgroundUrl + ')'}">
+<ion-content (press)="showImageActionSheet(result)" padding class="homeContent" [ngStyle]="{'background-image': 'url(' + backgroundUrl + ')'}">
   <ion-item no-lines class="homeSearchItem">
     <ion-input type="text" [(ngModel)]="searchWord" class="homeSearchInput" placeholder="Trump, Cats, Anything"></ion-input>
     <button ion-button clear color="light" item-right (click)="goSearchPage()" [disabled]="!searchWord">Search</button>
   </ion-item>
+  <div class="homeImageDiv">
+    <img src="./../../assets/imgs/giphy.gif" class="giphy" />
+  </div>
 </ion-content>
