--- a/src/pages/favorites/favorites.html
+++ b/src/pages/favorites/favorites.html
@@ -1,10 +1,10 @@
-<ion-content padding class="pageContent">
-  <ion-list no-lines *ngIf="favoritesResults">
-    <ion-card class="pageItem" *ngFor="let result of favoritesResults">
+<ion-content class="pageContent" padding>
+  <ion-list *ngIf="favoritesResults" no-lines>
+    <ion-card *ngFor="let result of favoritesResults" class="pageItem">
       <img (press)="showImageActionSheet(result)" [src]="result.images.original.url" alt="There must be a big problem">
     </ion-card>
   </ion-list>
   <div class="imageDiv">
-    <img src="./../../assets/imgs/giphy.gif" class="giphy" />
+    <img class="giphy" src="./../../assets/imgs/giphy.gif"/>
   </div>
 </ion-content>
