--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -3,13 +3,13 @@
     <ion-title>Results for {{searchWord}}</ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding class="pageContent">
-  <ion-list no-lines *ngIf="searchResults">
-    <ion-card class="pageItem" *ngFor="let result of searchResults">
+<ion-content class="pageContent" padding>
+  <ion-list *ngIf="searchResults" no-lines>
+    <ion-card *ngFor="let result of searchResults" class="pageItem">
       <img (press)="showImageActionSheet(result)" [src]="result.images.original.url" alt="There must be a big problem">
     </ion-card>
   </ion-list>
   <div class="imageDiv">
-    <img src="./../../assets/imgs/giphy.gif" class="giphy" />
+    <img class="giphy" src="./../../assets/imgs/giphy.gif"/>
   </div>
 </ion-content>
