--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
-<ion-tabs selectedIndex="1" color="dark">
-  <ion-tab [root]="tab1Root" tabTitle="Favorites" tabIcon="heart"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Trending" tabIcon="flame"></ion-tab>
+<ion-tabs color="dark" selectedIndex="1">
+  <ion-tab [root]="tab1Root" tabIcon="heart" tabTitle="Favorites"></ion-tab>
+  <ion-tab [root]="tab2Root" tabIcon="home" tabTitle="Home"></ion-tab>
+  <ion-tab [root]="tab3Root" tabIcon="flame" tabTitle="Trending"></ion-tab>
 </ion-tabs>
